--- a/index.HTML
+++ b/index.HTML
@@ -17,7 +17,7 @@
         /* Button styles */
         .button {
             display: inline-flex;
-               padding: 15px 60px;
+            padding: 15px 60px;
             justify-content: center;
             align-items: center;
             border-radius: 10px;
@@ -36,280 +36,192 @@
             float: left; /* Align logo to the left */
             margin-top: 90px;
             margin-right: 20px; /* Add margin for spacing */
-            max-width: 100%; /* Ensure logo does not exceed container width */
         }
 
-        .main-logo img {
-            width: 500px; /* Adjust width as needed */
-            z-index: 20; /* Set the z-index */
+        body {
+            background-color: #000e24;
+            margin: 0;
         }
 
-        @media (max-width: 768px) { /* Adjust breakpoint as needed */
-            .main-logo {
-                margin-top: 20px; /* Adjust margin for smaller screens */
-            }
-
-            .main-logo img {
-                width: 300px; /* Adjust width for smaller screens */
-            }
+        /* Header */
+        .logo {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 20px 0;
+            position: relative;
         }
 
-{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
+        .logo img {
+            max-width: 100%;
+            height: auto;
+        }
 
-body {
-    background-color: #000e24;
-    margin: 0;
-}
+        .container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            min-height: 100vh;
+            max-width: 80%;
+            margin: 0 auto;
+            overflow: hidden;
+            position: relative;
+            padding: 10px;
+        }
 
-/* Header */
-.logo {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 20px 0;
-    position: relative;
-}
+        .container::before {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 100%;
+            height: 0px;
+            background: #002d6a;
+            box-shadow: 0 0 190px #002d6a;
+            z-index: -1;
+        }
 
-.logo img {
-    max-width: 100%;
-    height: auto;
-}
+        .content {
+            background-color: #020d1e;
+            border-radius: 10px;
+            padding: 20px;
+            position: relative;
+            width: 100%;
+            height: 70%;
+            margin: auto;
+            border-bottom: 1px solid #00357b;
+        }
 
-.container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    min-height: 100vh;
-    max-width: 80%;
-    margin: 0 auto;
-    overflow: hidden;
-    position: relative;
-    padding: 10px;
-}
+        .round-container {
+            border-radius: 10px;
+            overflow: hidden;
+            position: relative;
+            margin: auto;
+            box-shadow: 0 0 30px #002d6a, 0 0 20px #002d6a inset;
+        }
 
-.container::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 100%;
-    height: 0px;
-    background: #002d6a;
-    box-shadow: 0 0 190px #002d6a;
-    z-index: -1;
-}
+        .background-video {
+            width: 100%;
+            height: 80vh;
+            object-fit: cover;
+            opacity: 0.3;
+        }
 
-.content {
-    background-color: #020d1e;
-    border-radius: 10px;
-    padding: 20px;
-    position: relative;
-    width: 100%;
-    height: 70%;
-    margin: auto;
-    border-bottom: 1px solid #00357b;
-}
+        .text {
+            color: rgb(202, 225, 255);
+            text-align: center;
+            font-family: 'Poppins', sans-serif;
+            font-size: 6vw;
+            font-style: normal;
+            font-weight: 600;
+            line-height: 120%;
+            letter-spacing: 0.8vw;
+            text-transform: uppercase;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            z-index: 1;
+        }
 
-.round-container {
-    border-radius: 10px;
-    overflow: hidden;
-    position: relative;
-    margin: auto;
-    box-shadow: 0 0 30px #002d6a, 0 0 20px #002d6a inset;
-}
+        .biggest-text {
+            font-size: 4.5vw;
+        }
 
-.background-video {
-    width: 100%;
-    height: 80vh;
-    object-fit: cover;
-    opacity: 0.3;
-}
+        .medium-text {
+            font-size: 2.5vw;
+        }
 
-.text {
-    color: rgb(202, 225, 255);
-    text-align: center;
-    font-family: 'Poppins', sans-serif;
-    font-size: 6vw;
-    font-style: normal;
-    font-weight: 600;
-    line-height: 120%;
-    letter-spacing: 0.8vw;
-    text-transform: uppercase;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 1;
-}
+        .lines {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin: 2vw 0;
+        }
 
-.biggest-text {
-    font-size: 4.5vw;
-}
+        .line {
+            height: 1px;
+            background-color: white;
+            width: 45%;
+        }
 
-.medium-text {
-    font-size: 2.5vw;
-}
+        .normal-text-container {
+            display: flex;
+            flex-wrap: wrap;
+            align-items: center;
+            margin-top: 2vw;
+            font-size: 1.5vw;
+        }
 
-.lines {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 2vw 0;
-}
+        .line-left,
+        .line-right {
+            flex: 1;
+            height: 1px;
+            background-color: white;
+        }
 
-.line {
-    height: 1px;
-    background-color: white;
-    width: 45%;
-}
+        .line-left {
+            margin-right: 2vw;
+        }
 
-.normal-text-container {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    margin-top: 2vw;
-    font-size: 1.5vw;
-}
+        .line-right {
+            margin-left: 2vw;
+        }
 
-.line-left,
-.line-right {
-    flex: 1;
-    height: 1px;
-    background-color: white;
-}
+        .normal-text {
+            font-size: 1.5vw;
+        }
 
-.line-left {
-    margin-right: 2vw;
-}
+        .price-icon {
+            margin-left: 2vw;
+        }
 
-.line-right {
-    margin-left: 2vw;
-}
+        .button-container {
+            width: 40%;
+            margin: auto;
+            text-align: center;
+            margin-top: 5vw;
+            margin-bottom: 10vh;
+            z-index: 2;
+            position: relative;
+        }
 
-.normal-text {
-    font-size: 1.5vw;
-}
+        .button {
+            display: inline-block;
+            background-color: #03142c;
+            border: none;
+            color: white;
+            font-family: 'Poppins', sans-serif;
+            text-transform: uppercase;
+            font-size: 1.5vw;
+            text-align: center;
+            padding: 1vw 4vw;
+            text-decoration: none;
+            border-radius: 10px;
+            transition: background-color 0.3s, box-shadow 0.3s;
+        }
 
-.price-icon {
-    margin-left: 2vw;
-}
+        .button:hover {
+            background-color: #000e24;
+            box-shadow: 0 0 4vw #00306f;
+        }
 
-.button-container {
-    width: 40%;
-    margin: auto;
-    text-align: center;
-    margin-top: 5vw;
-    margin-bottom: 10vh;
-    z-index: 2;
-    position: relative;
-}
-
-.button {
-    display: inline-block;
-    background-color: #03142c;
-    border: none;
-    color: white;
-    font-family: 'Poppins', sans-serif;
-    text-transform: uppercase;
-    font-size: 1.5vw;
-    text-align: center;
-    padding: 1vw 4vw;
-    text-decoration: none;
-    border-radius: 10px;
-    transition: background-color 0.3s, box-shadow 0.3s;
-}
-
-.button:hover {
-    background-color: #000e24;
-    box-shadow: 0 0 4vw #00306f;
-}
-
-/* Footer */
-.footer-container {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: #03142c;
-    color: #fff;
-    font-family: 'Poppins', sans-serif;
-    padding: 20px;
-}
-
-.footer-logo {
-    width: 50px;
-    height: 50px;
-}
-
-.footer-content {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 20px;
-    color: #fff;
-    font-family: 'Poppins', sans-serif;
-    font-size: 14px;
-}
-
-.footer-content p {
-    margin: 0 10px;
-}
-
-.footer-social {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 20px;
-}
-
-.footer-social a {
-    margin: 0 10px;
-    color: #fff;
-    font-size: 20px;
-}
-
-.footer-social a:hover {
-    color: #00ff00;
-}
-
-.footer-links {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 20px;
-    color: #fff;
-}
-
-.footer-links a {
-    color: #fff;
-}
-
-.footer-links a:hover {
-    color: #fff;
-}
-
-
-        /* Adjustments for footer alignment */
-.footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    background-color: rgb(3, 11, 24); /* Set background color to match the design */
-    color: white; /* Set text color to white */
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 20px; /* Add padding for better spacing */
-    z-index: 1000; /* Set a high z-index to ensure it stays on top of other elements */
-    border-top: 2px solid rgba(0, 112, 254, 0.6); /* Add blue border line at the top */
-}
+        /* Footer */
+        .footer {
+            position: fixed;
+            left: 0;
+            bottom: 0;
+            width: 100%;
+            background-color: rgb(3, 11, 24); /* Set background color to match the design */
+            color: white; /* Set text color to white */
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 10px 20px; /* Add padding for better spacing */
+            z-index: 1000; /* Set a high z-index to ensure it stays on top of other elements */
+            border-top: 2px solid rgba(0, 112, 254, 0.6); /* Add blue border line at the top */
+        }
 
         .footer-left {
             flex: 1;
@@ -333,6 +245,56 @@ body {
 
         .image-container img {
             width: 200px; /* Set width of the image */
+        }
+
+        .footer-logo {
+            position: fixed;
+            bottom: 20px;
+            left: 20px;
+            z-index: 40; /* Set the z-index higher than the footer line */
+        }
+
+        .footer-logo img {
+            width: 213px; /* Adjust width as needed */
+            height: 83px; /* Adjust height as needed */
+        }
+
+        /* Styles for Terms and Contact Us */
+        .footer-text-container {
+            display: inline-block; /* Display inline-block to control spacing */
+        }
+
+        .footer-text {
+            color: rgb(255, 255, 255);
+            font-family: 'Poppins', sans-serif;
+            font-size: 22px;
+            font-style: normal;
+            font-weight: 500;
+            line-height: 135%;
+            text-decoration: none;
+            cursor: pointer;
+            margin-left: 20px; /* Adjust the margin as needed */
+        }
+
+        .social-icons {
+            display: none; /* Hide social icons */
+        }
+
+        .copyright {
+            color: rgb(255, 255, 255);
+            font-family: 'Poppins', sans-serif;
+            font-size: 18px;
+        }
+
+        /* Line across the screen */
+        .footer-line {
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            height: 2px; /* Adjusted height for better visibility */
+            background-color: rgba(0, 112, 254, 0.6); /* Same color as the border of the video container */
+            z-index: 30; /* Set the z-index higher than other elements */
         }
 
     </style>
